--- a/index.html
+++ b/index.html
@@ -169,43 +169,46 @@
 					<div class="bb-item" id="page-3">
 						<div class="bb-custom-side" id="experience">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
+								<h1 class="text-center"><span class="page-heading">Education</span></h1>
 								<div class="row">
-									<div class="col-sm-12 animateFadeInUp">
-										<div class="panel panel-default">
-											<div class="panel-heading">Coder Factory</div>
-											<div class="panel-body">
-												A 6 Month intensive coding bootcamp with an emphasis on practical knowledge. First term saw us learn about
-											 front end web development. Starting with HTML, CSS moving into CSS libraries like bootstrap then going into agile methodology, git / github, wireframing,
-											 UX and UI design. Second term we dove deeply into Ruby and Ruby on Rails, also learning about hosting in Heroku, AWS, mapping user stories / journeys with trello, and ERD mapping using DBDesigner.
-											 Third term focused on Javascript, the MEAN stack (MongoDB, Express, Angular and Node) and React.
+									<div class="col-md-6">
+										<div class="blockquote-box blockquote-primary clearfix animateBounceInLeft">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2008 - 2010
 											</div>
-											<div class="panel-footer">Student, from 2016 to 2016</div>
+											<h2>St Marys Senior High School</h2>
+											<p class="text-justify">
+												Completed my HSC studying English, Mathematics, Biology, Business and PDHPE.
+											</p>
+										</div>
+										<div class="blockquote-box blockquote-success clearfix animateBounceInLeft">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2011 - 2012
+											</div>
+											<h2>Construction Management - UNSW</h2>
+											<p class="text-justify">
+												Completed 18 months of a construction management degree at UNSW.
+											</p>
 										</div>
 									</div>
-
-								</div>
-								<div class="row">
-									<div class="col-sm-6 animateFadeInUp">
-										<div class="panel panel-default">
-											<div class="panel-heading">Dem Novel Tees</div>
-											<div class="panel-body">
-												 I develop the brand strategies, manage and designed the website / inventory, help with production, design shirt images. Improving sales through online marketing
-												 and managing the social media presence.
+									<div class="col-md-6">
+										<div class="blockquote-box blockquote-warning clearfix animateBounceInRight">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2016
 											</div>
-											<div class="panel-footer">Co Founder and Product Manager, From 2015 to present</div>
+											<h2>Diploma Software Development - Australian Institute of Technology</h2>
+											<p class="text-justify">
+                        A 6 month intensive bootcamp providing me with the skills to become a full stack web developer.
+											</p>
 										</div>
-									</div>
-									<div class="col-sm-6 animateFadeInDown">
-										<div class="panel panel-default">
-											<div class="panel-heading">DiversityX</div>
-											<div class="panel-body">
-												DiversityX is a Startup that helps people with disabilities find work.
-												I worked with the Startup to build an MVP used as a demo at a REMARKABLE pitch night.
-												Built it in Ruby on Rails with a SQLite3 database in development and moved to postgres for product hosting it on heroku.
-												Worked with the designer to come up with user flow for the full build in which I will be contributing to also.
+										<div class="blockquote-box blockquote-danger clearfix animateBounceInRight">
+											<div class="square pull-left">
+												<i class="fa fa-calendar"></i> 2018
 											</div>
-											<div class="panel-footer">Developer, From 2016 to present</div>
+											<h2>Human Centred Design - IDEO</h2>
+											<p class="text-justify">
+												Completed a human centred design course gaining great insight into forward thinking design principals.
+											</p>
 										</div>
 									</div>
 								</div>
