--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 					  <ul class="nav navbar-nav navbar-right" id="menu">
 						<li><a href="#"  data-page="1">Home</a></li>
 						<li><a href="#" data-page="2">About</a></li>
-						<li><a href="#" data-page="3">Education</a></li>
-						<li><a href="#" data-page="4">Experience</a></li>
+						<li><a href="#" data-page="3">Experince</a></li>
+						<li><a href="#" data-page="4">Exducation</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
-						<li><a href="#" data-page="6">Portfolio</a></li>
+						<!-- <li><a href="#" data-page="6">Portfolio</a></li> -->
 						<li><a href="#" data-page="7">Contact</a></li>
 					  </ul>
 					</div><!-- /.navbar-collapse -->
@@ -222,29 +222,54 @@
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Skills</span></h1>
-                <div class="row">
+								<div class="row">
                   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="90">
                         <span class="sr-only">70% Complete (success)</span>
                       </div>
                       <span class="progress-type">HTML</span>
-                      <span class="progress-completed">90%</span>
+                      <span class="progress-completed">100%</span>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
                       <span class="progress-type">CSS</span>
-                      <span class="progress-completed">75%</span>
+                      <span class="progress-completed">100%</span>
                     </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="100"></div>
+                      <span class="progress-type">JIRA Agile Project Management</span>
+                      <span class="progress-completed">100%</span>
+                    </div>
+										<div class="progress">
+											<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
+											<span class="progress-type">UI Design (Photoshop)</span>
+											<span class="progress-completed">85%</span>
+										</div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
                       <span class="progress-type">Bootstrap</span>
+                      <span class="progress-completed">85%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Customer Relationship Management</span>
                       <span class="progress-completed">80%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
                       <span class="progress-type">Ruby On Rails</span>
                       <span class="progress-completed">75%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Google Ads</span>
+                      <span class="progress-completed">90%</span>
+                    </div>
+										<div class="progress">
+                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
+                      <span class="progress-type">Social Media Marketing</span>
+                      <span class="progress-completed">90%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
@@ -256,30 +281,15 @@
                       <span class="progress-type">AWS</span>
                       <span class="progress-completed">55%</span>
                     </div>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="65"></div>
-                      <span class="progress-type">Javascript</span>
-                      <span class="progress-completed">65%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
-                      <span class="progress-type">React</span>
-                      <span class="progress-completed">50%</span>
-                    </div>
-										<div class="progress">
-                      <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="50"></div>
-                      <span class="progress-type">Angular</span>
-                      <span class="progress-completed">50%</span>
-                    </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
-                      <span class="progress-type">Databases</span>
+                      <span class="progress-type">Database Design</span>
                       <span class="progress-completed">80%</span>
                     </div>
 										<div class="progress">
-                      <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Photoshop</span>
-                      <span class="progress-completed">75%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
+                      <span class="progress-type">SEO</span>
+                      <span class="progress-completed">80%</span>
                     </div>
 										<div class="progress">
                       <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="85"></div>
@@ -291,27 +301,17 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-4 col-sm-offset-2 animateFadeInUp">
                     <div class="well">
-                      <h3>Web Development</h3>
+                      <h3>Product Management</h3>
                       <p>
-												I am capable of building a web app that is mobile responsive from scratch.
-												I have expereince building apps with Ruby on Rails using SQLite3 & postgres for the databases, doing my own styling using bootstrap or materialise CSS libaries.
-												I have an a good understanding of javascript. I've worked through a few tutorials using MongoDB, Express, Angular and Node.js (MEAN stack)
-												having an understanding of some of the core concept but have alot to still learn and am looking forward to the challenge. In the mean time though
-												I'm focusing on rails with the jobs I'm currently working on. Once I have more experience there I'll go deepr into the
-												javascript frameworks and libaries. I have experience with CMS like shopify and WordPress as well as SEO knowledge.
+												I have experience in developing in the full product lifecyle from initial concept to full live solution. With the ability to design, project manage and assist with development.
                       </p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-4 animateFadeInUp">
                     <div class="well">
-                      <h3>Online Marketing / Business Strategy</h3>
+                      <h3>Innovation & Business Strategy</h3>
                       <p>
-                        I group these two skills together as I believe they go hand in hand in todays economy.
-												I have experience with facebook ads, instagram ads google ad words and SEO management.
-												Which are essential tools for growth of new and existing business. If leveraged correctly
-												brands can increased awareness of products and services targeting ads at the exact demographic
-												that applies to them. These ads can even be targeted by interests but still need to be able to communicate
-												the right message to be able to appeal to the target audience. Something that I have an eye for.
+                      	I love nothing more than scheming and coming up with new concepts and trialling them in the market. With extensive customer experience design & execution strategy planning.
                       </p>
                     </div>
                   </div>
@@ -322,7 +322,7 @@
 					<!-- /Skills -->
 
 					<!-- Portfolio -->
-					<div class="bb-item" id="page-5">
+					<!-- <div class="bb-item" id="page-5">
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Portfolio</span></h1>
@@ -374,7 +374,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
           <!-- /Portfolio -->
 
 					<!-- Contact -->
