--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
 										<img src="images/YA-logo.png" alt="joypad icon"/>
 									</div>
 									<div class="col-sm-6 col-sm-pull-2">
-										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a><br>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
 									<!-- </div>
 										<img src="images/DNTlogo-mini.png" alt="man icon"/>
 									</div>
