--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<li><a href="#"  data-page="1">Home</a></li>
 						<li><a href="#" data-page="2">About</a></li>
 						<li><a href="#" data-page="3">Experince</a></li>
-						<li><a href="#" data-page="4">Exducation</a></li>
+						<li><a href="#" data-page="4">Education</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
 						<!-- <li><a href="#" data-page="6">Portfolio</a></li> -->
 						<li><a href="#" data-page="7">Contact</a></li>
@@ -143,19 +143,21 @@
 					<div class="bb-item" id="page-2">
 						<div class="bb-custom-side">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Experience</span></h1>
 								<div class="row content-block text-justify animateFadeInRight">
-								<div class="col-sm-2 col-sm-offset-2 text-center">
-									<img src="images/YA-logo.png" alt="joypad icon"/>
+									<div class="col-sm-2 col-sm-offset-2 text-center">
+										<img src="images/YA-logo.png" alt="joypad icon"/>
+									</div>
+									<div class="col-sm-6">
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a><br>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
+									</div>
 								</div>
-								<div class="col-sm-6 col-sm-pull-2">
-									<p>Product Manager & Founder <a href="www.yogaiblity.org.au">Yogability Australia</a>Yogability Australia is a progressive disability support organisation that delivers mindful yoga care (MYCare) to participants of the NDIS. As apart of this organisation I have developed the full concept in partnership with my fiance. Designing & developing the full digital strategy & digital presence, from marketing to business processes.</p>
-								</div>
-								<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
-									<img src="images/yogahive-logo.png" alt="joypad icon"/>
-								</div>
-								<div class="col-sm-6 col-sm-pull-2">
-									<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a> <br>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+								<div class="row content-block text-justify animateFadeInLeft">
+									<div class="col-sm-2 col-sm-offset-2 col-sm-push-6 text-center">
+										<img src="images/yogahive-logo.png" alt="joypad icon"/>
+									</div>
+									<div class="col-sm-6 col-sm-pull-2">
+										<p>Product Manager & Founder <a href="www.yogaiblity.org.au">YogaHive Australia</a> <br>YogaHive Australia is an online yoga studio management directory with an inbuilt universal pass system. This universal pass system has been used to facilitate the bulk uptake of Yoga through distribution of coupons to various initiatives such as McDonalds monopoly & Optus give away campaigns. I designed and project managed a team of developers to build the project over the last 2 years.</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -381,10 +383,9 @@
 								<h1 class="text-center"><span class="page-heading">Contact</span></h1>
 								<div class="row">
 									<div class="col-sm-12 text-center">
-										<img class="imageShrink3" src="images/yogahive-logo.png">
-										<img class="imageShrink3" src="images/YA-logo.png">
+										<img class="imageShrink3" src="images/envelope-icon.png">
 										<br>
-										<h2 class="contact">marshall@yogability.org.au</h2>
+										<h2 class="contact">Marshallgray1992@gmail.com</h2>
 										<br>
 										<a class="btn" href="https://www.linkedin.com/in/marshall-gray-031a85103?trk=nav_responsive_tab_profile"><i class="fa fa-4x fa-linkedin"></i></a>
 									</div>
