--- a/index.html
+++ b/index.html
@@ -383,9 +383,10 @@
 								<h1 class="text-center"><span class="page-heading">Contact</span></h1>
 								<div class="row">
 									<div class="col-sm-12 text-center">
-										<img class="imageShrink3" src="images/envelope-icon.png">
+										<img class="imageShrink3" src="images/YA-logo.png">
+										<img class="imageShrink3" src="images/yogahive-logo.png">
 										<br>
-										<h2 class="contact">Marshallgray1992@gmail.com</h2>
+										<h2 class="contact">marshall@yogability.org.au</h2>
 										<br>
 										<a class="btn" href="https://www.linkedin.com/in/marshall-gray-031a85103?trk=nav_responsive_tab_profile"><i class="fa fa-4x fa-linkedin"></i></a>
 									</div>
@@ -425,7 +426,7 @@
     </script>
 
 		<!-- Theme change plugin, make sure to remove before deploying into production -->
-		<div class="slide-out-div">
+		<!-- <div class="slide-out-div">
 			<a class="handle" href="#"></a>
 			<h3>Change Color</h3>
 			<ul id="color-switcher" class="list-inline">
@@ -438,6 +439,6 @@
 				<li><a href="#" data-rel="css/theme-colors/glade.css"><img src="images/glade-theme.png" alt="Glade Theme Color" /></a></li>
 				<li><a href="#" data-rel="css/theme-colors/kimberly.css"><img src="images/kimberly-theme.png" alt="Kimberly Theme Color" /></a></li>
 			</ul>
-		</div>
+		</div> -->
 	</body>
 </html>
