--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					  <ul class="nav navbar-nav navbar-right" id="menu">
 						<li><a href="#"  data-page="1">Home</a></li>
 						<li><a href="#" data-page="2">About</a></li>
-						<li><a href="#" data-page="3">Experince</a></li>
+						<li><a href="#" data-page="3">Experience</a></li>
 						<li><a href="#" data-page="4">Education</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
 						<!-- <li><a href="#" data-page="6">Portfolio</a></li> -->
